[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.6"
rust-crypto = "^0.2"
bincode = "1.3"
bitcoincash-addr = "0.5.2"
rand = "0.8.5"
merkle-cbt = "0.3.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
sled = "0.34.7"
failure = "0.1.8"
clap = "4.5.6"